# base-unicode-symbols

./: LICENSE  README.markdown  base-unicode-symbols.cabal  changelog.md
Control/Applicative/: Unicode.hs
Control/Arrow/: Unicode.hs
Control/Category/: Unicode.hs
Control/Monad/: Unicode.hs
Data/Bool/: Unicode.hs
Data/Eq/: Unicode.hs
Data/Foldable/: Unicode.hs
Data/Function/: Unicode.hs
Data/Functor/: Unicode.hs
Data/List/: Unicode.hs
Data/Monoid/: Unicode.hs
Data/Ord/: Unicode.hs
Data/String/: Unicode.hs
Prelude/: Unicode.hs
src/Control/Applicative/: Unicode.hs
src/Control/Arrow/: Unicode.hs
src/Control/Category/: Unicode.hs
src/Control/Monad/: Unicode.hs
src/Data/Bool/: Unicode.hs
src/Data/Eq/: Unicode.hs
src/Data/Foldable/: Unicode.hs
src/Data/Function/: Unicode.hs
src/Data/List/: Unicode.hs
src/Data/Monoid/: Unicode.hs
src/Data/Ord/: Unicode.hs
src/Data/String/: Unicode.hs
src/Numeric/Natural/: Unicode.hs
src/Prelude/: Unicode.hs
