name:          base-unicode-symbols
version:       0.2.4
cabal-version: >=1.6
build-type:    Simple
stability:     provisional
author:        Roel van Dijk <roel@lambdacube.nl>
maintainer:    Roel van Dijk <roel@lambdacube.nl>
copyright:     2009–2019 Roel van Dijk <roel@lambdacube.nl>
license:       BSD3
license-file:  LICENSE
category:
homepage:      http://haskell.org/haskellwiki/Unicode-symbols
bug-reports:   https://github.com/roelvandijk/base-unicode-symbols/issues
synopsis:      Unicode alternatives for common functions and operators
description:
  This package defines new symbols for a number of functions,
  operators and types in the base package.
  .
  All symbols are documented with their actual definition and
  information regarding their Unicode code point. They should be
  completely interchangeable with their definitions.
  .
  For further Unicode goodness you can enable the @UnicodeSyntax@
  language extension [1]. This extension enables Unicode characters
  to be used to stand for certain ASCII character sequences,
  i.e. &#x2192; instead of @->@, &#x2200; instead of @forall@ and many
  others.
  .
  Original idea by P&#xE9;ter Divi&#xE1;nszky.
  .
  \[1] <https://downloads.haskell.org/~ghc/latest/docs/html/users_guide/glasgow_exts.html#unicode-syntax>

extra-source-files: LICENSE, README.markdown

source-repository head
  type:     git
  location: git://github.com/roelvandijk/base-unicode-symbols.git

flag old-base
  description: Support for base < 3.0.3.1
  default: False

flag base-4-8
  description: Support features of base >= 4.8.0.0
  default: True

library
  hs-source-dirs: src
  ghc-options: -Wall

  if flag(old-base)
    build-depends: base >= 3.0 && < 3.0.3.1
  else
    exposed-modules: Control.Category.Unicode
    if flag(base-4-8)
      build-depends: base >= 4.8.0.0 && < 5
      exposed-modules: Numeric.Natural.Unicode
    else
      build-depends: base >= 3.0.3.1 && < 5
  exposed-modules: Control.Applicative.Unicode
                 , Control.Arrow.Unicode
                 , Control.Monad.Unicode
                 , Data.Bool.Unicode
                 , Data.Eq.Unicode
                 , Data.Foldable.Unicode
                 , Data.Function.Unicode
                 , Data.List.Unicode
                 , Data.Monoid.Unicode
                 , Data.Ord.Unicode
                 , Data.String.Unicode
                 , Prelude.Unicode
